[package]
name = "byte_conv"
version = "0.1.1"
authors = ["Lolirofle <lolipopple@hotmail.com>"]
description = "Simple conversion traits to bytes"
homepage = "https://github.com/Lolirofle/byte_conv"
repository = "https://github.com/Lolirofle/byte_conv.git"
keywords = ["byte","bytes","conversions"]
license = "MIT"
